--- a/css/main.css
+++ b/css/main.css
@@ -276,13 +276,13 @@ button{
     height: fit-content;
     padding: 20px 0px;
 }
-.js-btn{
+/* .js-btn{
+    color: white; */
+    /* background-color: #5eb3c0;
     border: 1px solid #5eb3c0;
-    color: white;
-    background-color: #5eb3c0;
     border-radius: 4px;
     padding: 5px 30px;
-}
+} */
 
 
 .browse a.colored{
@@ -295,6 +295,10 @@ button{
 
 .active-btn{
     background-color: #5eb3c0;
+    color: white;
+    border: 1px solid #5eb3c0;
+    border-radius: 4px;
+    padding: 5px 30px;
 }
 
 .active-btn:hover{
@@ -303,8 +307,10 @@ button{
 
 .browse-buttons .btn-brws{
     background-color: rgba(255, 255, 255, 0);
-    color: #5eb3c0;
-    border: 1px solid;
+    color: #5eb3c0;;
+    border: 1px solid #5eb3c0;
+    border-radius: 4px;
+    padding: 5px 30px;
 }
 
 .browse-buttons .btn-brws:hover{
@@ -313,6 +319,9 @@ button{
     border: 1px solid;
 }
 
+.browse-cards{
+    display: block;
+}
 
 .browse-cards_row{
     /* border: 1px solid blue; */
